# MetricSfM

./: README.md
MSP/: README.md
SfM/: CMakeLists.txt  LocalConfig.cmake
SfM/src/: accuracy_accessment.cc  accuracy_accessment.h  basic_structs.h  camera.cc  camera.h  database.cc  database.h  dense_reconstruction.cc  dense_reconstruction.h  graph.cc  graph.h  optimizer.cc  optimizer.h  sfm_incremental.cc  sfm_incremental.h  slam_gps.cc  slam_gps.h  structure.cc  structure.h
SfM/src/dense/cudasgm/include/: libsgm_config.h
SfM/src/dense/libelas/include/: descriptor.h  elas.h  filter.h  matrix.h
SfM/src/dense/libelas/src/: filter.cpp  main.cpp
SfM/src/feature/: feature_extractor_cuda_sift.cpp  feature_extractor_cuda_sift.h  feature_extractor_opencv.cc  feature_extractor_opencv.h  feature_extractor_panorama.cc  feature_extractor_panorama.h  feature_extractor_sift_gpu.cpp  feature_extractor_sift_gpu.h  feature_extractor_vl_sift.cpp  feature_extractor_vl_sift.h  feature_matching.cpp  feature_matching.h  feature_matching_essential.cpp  feature_matching_essential.h  feature_matching_flann.cpp  feature_matching_flann.h  feature_matching_sift_gpu.h  feature_tracking.cpp  feature_tracking.h  feature_verification.cc  feature_verification.h
SfM/src/graph/: fine_matching_graph.cc  fine_matching_graph.h  initial_matching_graph.cc  initial_matching_graph.h  matching_graph_via_combined.cc  matching_graph_via_combined.h  matching_graph_via_feature.cc  matching_graph_via_feature.h  matching_graph_via_invertedfile.cc  matching_graph_via_invertedfile.h  matching_graph_word_querying.cc  matching_graph_word_querying.h  similarity_graph.cc  similarity_graph.h  similarity_graph_bow_distance.cc  similarity_graph_bow_distance.h  similarity_graph_word_number.cc  similarity_graph_word_number.h
SfM/src/orientation/: absolute_pose_estimation.cc  absolute_pose_estimation.h  absolute_pose_via_dlt_oriented.cc  absolute_pose_via_dlt_oriented.h  absolute_pose_via_epnp.cc  absolute_pose_via_epnp.h  absolute_pose_via_epnpf.cc  absolute_pose_via_epnpf.h  absolute_pose_via_p3p.cc  absolute_pose_via_p3p.h  absolute_pose_via_p3pf.cc  absolute_pose_via_p3pf.h  absolute_pose_via_p4pf.cc  absolute_pose_via_p4pf.h  absolute_pose_via_p4pf_helper.cc  absolute_pose_via_p4pf_helper.h  absolute_pose_via_rpnp.cc  absolute_pose_via_rpnp.h  essential_matrix_five_point.cc  essential_matrix_five_point.h  fundamental_matrix_eight_point.cc  fundamental_matrix_eight_point.h  relative_pose_estimation.cc  relative_pose_estimation.h  relative_pose_from_essential_matrix.cc  relative_pose_from_essential_matrix.h  relative_pose_from_fundamental_matrix.cc  relative_pose_from_fundamental_matrix.h
SfM/src/utils/: basic_funcs.cc  basic_funcs.h  calibration.cc  geo_verification.cc  geo_verification.h  gps_error_pose.h  nanoflann_utils.h  reprojection_error_pose.h  reprojection_error_pose_cam.h  reprojection_error_pose_cam_xyz.h  reprojection_error_pose_xyz.h  reprojection_error_xyz.h  transformation.cpp  transformation.h
SfM/test/: CMakeLists.txt
SfM/test/test_calib/: CMakeLists.txt  test_calib.cc
SfM/test/test_dense/: CMakeLists.txt  test_dense.cc
SfM/test/test_sfm/: CMakeLists.txt  test_sfm.cc
SfM/test/test_slam/: CMakeLists.txt  test_slam.cc
